--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ authors = ["Ahmed Eletreby"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+axum = "0.6.20"
+axum-macros = "0.3.8"
+rand = "0.8.5"
+sea-orm = "0.12.3"
+serde = { version ="1.0.188", features = ["derive"]}
+tokio = { version ="1.32.0", features = ["full"]}
+tracing = "0.1.37"
+url = "2.4.1"
