Add database and migrations

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://user:OpenSesame@localhost:5432/shortner
+DATABASE_URL=postgres://user:OpenSesame@localhost:5432/shortener
 BASE_URL=https://tier.app/
