--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2021"
 authors = ["Ahmed Eletreby"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [".", "entity", "migration"]
 
 [dependencies]
 anyhow = "1.0.75"
 axum = "0.6.20"
 axum-macros = "0.3.8"
+entity = { path = "entity" }
+migration = { path = "migration"}
 rand = "0.8.5"
 sea-orm = "0.12.3"
 serde = { version ="1.0.188", features = ["derive"]}
