--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ migration = { path = "migration"}
 nanoid = "0.4.0"
 opentelemetry = { version = "0.20", features = ["trace", "rt-tokio"] }
 rand = "0.8.5"
-sea-orm = "0.12.3"
+sea-orm = {version="0.12.3",features = ["mock"]}
 serde = { version ="1.0.188", features = ["derive"]}
 tokio = { version ="1.32.0", features = ["full"]}
 tracing = "0.1.37"
